Fix footer signup spacing

--- a/_assets/scss/partials/_signup.scss
+++ b/_assets/scss/partials/_signup.scss
@@ -4,7 +4,7 @@
   }
 }
 
-.footer-top nav li .signup {
+footer[role='contentinfo'] .footer-top nav .signup {
   h2 {
     margin-bottom: $small-spacing;
   }
